# apps

./: .gitignore  gitcfg_check.txt  gitcfg_check2.txt  state_check.txt  tmp_cfg.txt  tmp_verify.txt
language-aware-conferencing-system/lams-mvp/backend/: Dockerfile  _conflict_check.py  alembic.ini  pyproject.toml
language-aware-conferencing-system/lams-mvp/backend/alembic/: README  env.py  script.py.mako
language-aware-conferencing-system/lams-mvp/backend/alembic/versions/: 001_initial_schema.py  002_add_subtitles.py  003_add_meeting_sessions.py  004_add_system_config.py  005_add_glossary_term.py  006_add_segments.py  007_add_meeting_mode.py  008_migrate_subtitles_to_segments.py  009_drop_subtitles.py  010_add_qos_summary.py  011_add_participant.py  012_align_default_mode_to_a.py  013_add_training_data.py  014_add_pipeline_event.py  015_add_speaker_label.py  016_add_experiment_metric.py
language-aware-conferencing-system/lams-mvp/backend/app/: config.py  languages.py  main.py
language-aware-conferencing-system/lams-mvp/backend/app/admin/: __init__.py  routes.py
language-aware-conferencing-system/lams-mvp/backend/app/ai_pipeline/: ab_runtime.py  ab_testing.py  diarization.py  experiment_routes.py  mode_router.py  model_registry.py  offline_rerun.py  orchestrator.py  pipeline.py  plugin_sdk.py  providers.py  qos.py  registry.py  rerun_routes.py  voice_clone_gate.py  voice_consent.py  vram_broker.py
language-aware-conferencing-system/lams-mvp/backend/app/audio/: __init__.py  archive.py  pcm.py  speaker_embedding.py  vad.py  watermark.py
language-aware-conferencing-system/lams-mvp/backend/tests/: test_ab_runtime.py  test_ab_testing.py  test_agent_queue.py  test_ai_providers.py  test_audio_archive.py  test_correction.py  test_diarization.py  test_experiment_routes.py  test_experiments_db.py  test_glossary.py  test_golden_set.py  test_google_provider.py  test_listeners.py  test_livekit_sink.py  test_livekit_token.py  test_local_asr.py  test_local_mt.py  test_local_tts.py  test_meetings_api.py  test_minutes.py  test_mode2_quality_path.py  test_mode_router.py  test_model_registry.py  test_noise_filter.py  test_number_retention_log.py  test_offline_rerun.py  test_orchestrator.py  test_partial_subtitle.py  test_participant_persistence.py  test_pcm.py  test_persistence_segments.py  test_plugin_sdk.py  test_processor.py  test_qos.py  test_registry.py  test_replay_log.py  test_rerun_routes.py  test_rooms_session_api.py  test_segmenter.py  test_segmenter_partial.py  (+11 more)
(+1074 files in other folders)
